// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`methods 1`] = `
Array [
  "$",
  "C",
  "F",
  "I",
  "K",
  "PLACEHOLDER",
  "T",
  "__",
  "add",
  "addIndex",
  "all",
  "always",
  "and",
  "any",
  "anyPass",
  "ap",
  "binarySideEffect",
  "both",
  "box",
  "complement",
  "concat",
  "cond",
  "constant",
  "curry",
  "curryN",
  "custom",
  "def",
  "difference",
  "divide",
  "either",
  "entries",
  "equals",
  "every",
  "filter",
  "first",
  "flip",
  "forEach",
  "freeze",
  "fromEntries",
  "fromPairs",
  "gt",
  "gte",
  "identity",
  "ifElse",
  "includes",
  "inspect",
  "is",
  "isArray",
  "isBoolean",
  "isFunction",
  "isNumber",
  "isObject",
  "isRawObject",
  "isString",
  "isSymbol",
  "isUndefined",
  "isUnmatched",
  "j2",
  "jam",
  "join",
  "keys",
  "last",
  "length",
  "lt",
  "lte",
  "map",
  "mash",
  "memoizeWith",
  "merge",
  "mergeRight",
  "multiply",
  "not",
  "nth",
  "or",
  "path",
  "pathEq",
  "pathIs",
  "pathOr",
  "pathSatisfies",
  "pipe",
  "prop",
  "propEq",
  "propIs",
  "propOr",
  "propSatisfies",
  "range",
  "reduce",
  "reject",
  "sideEffect",
  "sideEffect2",
  "slice",
  "smooth",
  "some",
  "sort",
  "split",
  "subtract",
  "temper",
  "toJSON",
  "toLower",
  "toPairs",
  "toUpper",
  "trace",
  "uniq",
  "version",
  "when",
]
`;

exports[`methods 2`] = `
Array [
  "$",
  "C",
  "I",
  "K",
  "PLACEHOLDER",
  "binarySideEffect",
  "box",
  "constant",
  "custom",
  "def",
  "entries",
  "every",
  "first",
  "freeze",
  "fromEntries",
  "inspect",
  "isArray",
  "isBoolean",
  "isFunction",
  "isNumber",
  "isObject",
  "isRawObject",
  "isString",
  "isSymbol",
  "isUndefined",
  "isUnmatched",
  "j2",
  "jam",
  "mash",
  "pathIs",
  "sideEffect",
  "sideEffect2",
  "smooth",
  "some",
  "temper",
  "toJSON",
  "trace",
  "version",
]
`;

exports[`methods 3`] = `
Array [
  "adjust",
  "allPass",
  "aperture",
  "append",
  "apply",
  "applySpec",
  "applyTo",
  "ascend",
  "assoc",
  "assocPath",
  "binary",
  "bind",
  "call",
  "chain",
  "clamp",
  "clone",
  "comparator",
  "compose",
  "composeK",
  "composeP",
  "composeWith",
  "construct",
  "constructN",
  "contains",
  "converge",
  "countBy",
  "dec",
  "defaultTo",
  "descend",
  "differenceWith",
  "dissoc",
  "dissocPath",
  "drop",
  "dropLast",
  "dropLastWhile",
  "dropRepeats",
  "dropRepeatsWith",
  "dropWhile",
  "empty",
  "endsWith",
  "eqBy",
  "eqProps",
  "evolve",
  "find",
  "findIndex",
  "findLast",
  "findLastIndex",
  "flatten",
  "forEachObjIndexed",
  "groupBy",
  "groupWith",
  "has",
  "hasIn",
  "hasPath",
  "head",
  "identical",
  "inc",
  "indexBy",
  "indexOf",
  "init",
  "innerJoin",
  "insert",
  "insertAll",
  "intersection",
  "intersperse",
  "into",
  "invert",
  "invertObj",
  "invoker",
  "isEmpty",
  "isNil",
  "juxt",
  "keysIn",
  "lastIndexOf",
  "lens",
  "lensIndex",
  "lensPath",
  "lensProp",
  "lift",
  "liftN",
  "mapAccum",
  "mapAccumRight",
  "mapObjIndexed",
  "match",
  "mathMod",
  "max",
  "maxBy",
  "mean",
  "median",
  "mergeAll",
  "mergeDeepLeft",
  "mergeDeepRight",
  "mergeDeepWith",
  "mergeDeepWithKey",
  "mergeLeft",
  "mergeWith",
  "mergeWithKey",
  "min",
  "minBy",
  "modulo",
  "move",
  "nAry",
  "negate",
  "none",
  "nthArg",
  "o",
  "objOf",
  "of",
  "omit",
  "once",
  "otherwise",
  "over",
  "pair",
  "partial",
  "partialRight",
  "partition",
  "pick",
  "pickAll",
  "pickBy",
  "pipeK",
  "pipeP",
  "pipeWith",
  "pluck",
  "prepend",
  "product",
  "project",
  "props",
  "reduceBy",
  "reduceRight",
  "reduceWhile",
  "reduced",
  "remove",
  "repeat",
  "replace",
  "reverse",
  "scan",
  "sequence",
  "set",
  "sortBy",
  "sortWith",
  "splitAt",
  "splitEvery",
  "splitWhen",
  "startsWith",
  "sum",
  "symmetricDifference",
  "symmetricDifferenceWith",
  "tail",
  "take",
  "takeLast",
  "takeLastWhile",
  "takeWhile",
  "tap",
  "test",
  "then",
  "times",
  "toPairsIn",
  "toString",
  "transduce",
  "transpose",
  "traverse",
  "trim",
  "tryCatch",
  "type",
  "unapply",
  "unary",
  "uncurryN",
  "unfold",
  "union",
  "unionWith",
  "uniqBy",
  "uniqWith",
  "unless",
  "unnest",
  "until",
  "update",
  "useWith",
  "values",
  "valuesIn",
  "view",
  "where",
  "whereEq",
  "without",
  "xprod",
  "zip",
  "zipObj",
  "zipWith",
  "thunkify",
]
`;

exports[`methods 4`] = `
Array [
  "curryify",
  "curryObjectK",
  "curryObjectN",
  "curryObjectKN",
  "remap",
  "remapArray",
  "compose",
  "random",
  "symmetricDifference",
  "alterIndex",
  "alterFirstIndex",
  "alterLastIndex",
  "relativeIndex",
  "choice",
  "fork",
  "iterate",
  "fold",
  "chain",
  "flatMap",
  "equal",
  "round",
  "pow",
  "invert",
  "charAt",
  "codePointAt",
  "endsWith",
  "indexOf",
  "lastIndexOf",
  "match",
  "padEnd",
  "padStart",
  "repeat",
  "replace",
  "search",
  "startsWith",
  "substr",
  "trim",
  "ternary",
  "triplet",
  "assign",
  "mapTuple",
  "mapTuples",
  "mapKeys",
  "pairwise",
  "pairwiseObject",
  "isTypeof",
  "isNil",
  "isDistinctObject",
  "isPOJO",
  "objectLength",
  "anyLength",
  "which",
]
`;

exports[`methods 5`] = `
Array [
  "C",
  "F",
  "T",
  "__",
  "addIndex",
  "all",
  "always",
  "and",
  "any",
  "anyPass",
  "binarySideEffect",
  "both",
  "box",
  "complement",
  "cond",
  "constant",
  "curryN",
  "custom",
  "def",
  "either",
  "first",
  "forEach",
  "fromEntries",
  "gt",
  "gte",
  "identity",
  "ifElse",
  "includes",
  "inspect",
  "is",
  "isRawObject",
  "isSymbol",
  "isUndefined",
  "isUnmatched",
  "j2",
  "jam",
  "last",
  "lt",
  "lte",
  "mash",
  "memoizeWith",
  "mergeRight",
  "nth",
  "or",
  "pathIs",
  "sideEffect",
  "sideEffect2",
  "slice",
  "smooth",
  "temper",
  "toJSON",
  "toLower",
  "toUpper",
  "trace",
  "uniq",
  "when",
]
`;
